Add LOCKABLE annotation to QuicLockImpl.

QuicLockImpl's methods had various lock annotations (e.g.
EXCLUSIVE_LOCK_FUNCTION), but the class itself wasn't annotated as
LOCKABLE.  After a recent clang change this was causing compiler errors
like the one reported in https://crbug.com/887610.

This CL fixes this by adding LOCKABLE annotation to QuicLockImpl.

I've searched for other files under //net/third_party/quic that include
LOCK_FUNCTION substring but do not include LOCKABLE substring.  It seems
that quic_mutex_impl.h was the only one.

Merge internal change 213866214

Bug: 887610
Change-Id: Iddedd166a97cfe1f77ea2c14a6e98a836bdb08d8
Reviewed-on: https://chromium-review.googlesource.com/1237716
Reviewed-by: Zhongyi Shi <zhongyi@chromium.org>
Commit-Queue: Zhongyi Shi <zhongyi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593240}