net/third_party/quic/platform/impl/quic_mutex_impl.h
@@ -50,7 +50,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace quic {
 
 // A class wrapping a non-reentrant mutex.
-class QUIC_EXPORT_PRIVATE QuicLockImpl {
+class LOCKABLE QUIC_EXPORT_PRIVATE QuicLockImpl {
  public:
   QuicLockImpl() = default;
 
